# simulator

./: Cargo.toml  PLAN.md  README.md  TODO.md  emulator_gui-c0d4808dec972cbf.js  emulator_gui-c0d4808dec972cbf_bg.wasm  index.html  sw.js
.github/workflows/: pages.yml  rust.yml
emulator_core/: Cargo.toml
emulator_core/examples/: adder.rs  notloop.rs  srlatch.rs
emulator_core/src/: components.rs  graph.rs  main.rs  util.rs
emulator_wasm_frontend/: Cargo.toml
emulator_wasm_frontend/src/: components.rs  lib.rs
emulator_wasm_frontend/src/components/: gates.rs  simple.rs
emulator_wasm_frontend/tstest/: index.html  package-lock.json  tsconfig.json  webpack.config.js
emulator_wasm_frontend/tstest/src/: App.ts  bootstrap.ts  shapes.ts
emulator_wasm_frontend/www/: .gitignore  index.html  index.js  package-lock.json  package.json  webpack.config.js
emulator_wasm_frontend/www/src/: App.ts  Cable.ts  Context.ts  GraphNode.ts  Grid.ts  Slot.ts  component_list.ts  index.js  shapes.js  shapes.ts  side_panel.ts
emulator_web/: Cargo.toml  README.md  index.html  package-lock.json  package.json
emulator_web/bridge/: Cargo.toml
emulator_web/src/: actions.rs  app.rs  app.ts  controllerRegister.ts  grid.ts  gridCache.ts  index.ts  lib.rs  (+1 more)
simulator_core/: Cargo.toml
simulator_core/examples/: adder.rs  notloop.rs  srlatch.rs
simulator_core/src/: lib.rs  util.rs
simulator_core/src/components/: mod.rs  simple.rs
simulator_core/src/graph/: mod.rs
simulator_web/: Cargo.toml  index.html
src/: components.rs  computer.rs  graph.rs  lib.rs  main.rs  signals.rs
(+91 files in other folders)
