[package]
name = "emulator_wasm_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
emulator_core = { path = "../emulator_core" }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
