[package]
name = "emulator_wasm_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
emulator_core = { path = "../emulator_core" }
enum_dispatch = "0.3.12"
js-sys = "0.3.64"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.103"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
