[package]
name = "simulator_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
enum_dispatch = "0.3.12"
serde = { version = "1.0.174", features = ["derive"] }
slotmap = { version = "1.0.6", features = ["serde"] }
